--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,50 @@
-# build output
+# ===================
+# Build Output
+# ===================
 dist/
-# generated types
+
+# ===================
+# Generated Files
+# ===================
 .astro/
 
-# dependencies
+# ===================
+# Dependencies
+# ===================
 node_modules/
 
-# logs
+# ===================
+# Logs
+# ===================
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-
-# environment variables
+# ===================
+# Environment Variables
+# ===================
 .env
-.env.production
+.env.*
+!.env.example
 
-# macOS-specific files
+# ===================
+# OS Files
+# ===================
 .DS_Store
+Thumbs.db
 
-# jetbrains setting folder
+# ===================
+# IDEs & Editors
+# ===================
+# JetBrains (WebStorm, IntelliJ, etc.)
 .idea/
+
+# VSCode
+.vscode/
+
+# ===================
+# Lock Files
+# ===================
+package-lock.json
